// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Chat Pagination Match Snapshots: default 1`] = `
<DocumentFragment>
  <div
    class="dtc-aigc-pagination"
  >
    <span
      aria-label="left"
      class="anticon anticon-left arrow-disabled"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </span>
    <section>
      <span>
        1
      </span>
      <span>
        /
      </span>
      <span>
        5
      </span>
    </section>
    <span
      aria-label="right"
      class="anticon anticon-right"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="right"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Test Chat Pagination Match Snapshots: disabled 1`] = `
<DocumentFragment>
  <div
    class="dtc-aigc-pagination"
  >
    <span
      aria-label="left"
      class="anticon anticon-left arrow-disabled"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </span>
    <section>
      <span>
        1
      </span>
      <span>
        /
      </span>
      <span>
        5
      </span>
    </section>
    <span
      aria-label="right"
      class="anticon anticon-right arrow-disabled"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="right"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
